# gti

./: .gitignore  Cargo.toml  LICENSE
.github/: CODEOWNERS
.github/workflows/: build.yaml  clippy.yaml
src/: gti.rs  main.rs  tig.rs
tests/: gti_init.rs
tests/common/: mod.rs
