[package]
name = "tig-cli"
authors = ["Jacob Strader <jacob.thomas.strader@gmail.com>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tig"
path = "src/main.rs"

[lib]
name = "tig"
path = "src/tig.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.24"
log = "0.4.22"
simplelog = "0.12.2"
thiserror = "2.0.10"

[dev-dependencies]
project-root = "0.2.2"
